# zerobrew

./: CONTRIBUTING.md  Cargo.toml  Justfile  README.md  install-completions.sh  install.sh
.github/workflows/: test.yml
zb_cli/: Cargo.toml
zb_cli/src/: init.rs  main.rs
zb_cli/src/commands/: init.rs
zb_cli/tests/: integration.rs
zb_core/: Cargo.toml
zb_core/fixtures/: formula_bar.json  formula_foo.json
zb_core/src/: errors.rs  formula.rs  lib.rs
zb_io/src/: download.rs  install.rs
