[workspace]
members = ["zb_core", "zb_io", "zb_cli"]
resolver = "3"

[workspace.package]
rust-version = "1.90"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
console = "0.15"
indicatif = "0.17"
reqwest = { version = "0.12", features = ["json", "stream"] }
flate2 = "1.0"
tar = "0.4"
xz2 = "0.1"
zstd = "0.13"
rusqlite = { version = "0.32", features = ["bundled"] }
futures = "0.3"
futures-util = "0.3"
rayon = "1.10"
regex = "1"
sha2 = "0.10"
walkdir = "2"
fs4 = "0.13"
libc = "0.2"

# Dev dependencies
tempfile = "3"
wiremock = "0.6"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
