[package]
name = "zb_cli"
version = "0.1.0"
edition = "2024"
rust-version.workspace = true

[[bin]]
name = "zb"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
clap_complete = { workspace = true, features = ["unstable-dynamic"] }
tokio = { workspace = true, features = ["full"] }
indicatif.workspace = true
console.workspace = true

zb_core = { path = "../zb_core" }
zb_io = { path = "../zb_io" }

[target.'cfg(unix)'.dependencies]
libc.workspace = true
